--- a/apiTestingExample/Base.lproj/Main.storyboard
+++ b/apiTestingExample/Base.lproj/Main.storyboard
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +14,78 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="apiTestingExample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fLS-jN-Vw4">
+                                <rect key="frame" x="144" y="103" width="87" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ssd-9z-T45"/>
+                                </constraints>
+                                <state key="normal" title="Get Weather"/>
+                                <connections>
+                                    <action selector="getWeatherButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cLn-md-h55"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter City" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VSm-m7-XH9">
+                                <rect key="frame" x="16" y="57" width="343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="PBf-jT-7zY"/>
+                                    <constraint firstAttribute="height" constant="30" id="YrM-Kj-uYk"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="gmq-8r-odP"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="vRv-18-mvp"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klI-FT-lHH">
+                                <rect key="frame" x="18.5" y="206" width="338" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="338" id="oRo-k2-5aN"/>
+                                    <constraint firstAttribute="height" constant="21" id="z5y-wg-cNc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Degrees" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aeI-mP-V3C">
+                                <rect key="frame" x="16" y="160" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="KCa-sO-40C"/>
+                                    <constraint firstAttribute="height" constant="21" id="oVv-XN-Tfj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="klI-FT-lHH" firstAttribute="top" secondItem="aeI-mP-V3C" secondAttribute="bottom" constant="25" id="4xt-XW-9U0"/>
+                            <constraint firstItem="VSm-m7-XH9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ArS-Fa-i66"/>
+                            <constraint firstItem="fLS-jN-Vw4" firstAttribute="top" secondItem="VSm-m7-XH9" secondAttribute="bottom" constant="16" id="AwG-xp-CBP"/>
+                            <constraint firstItem="fLS-jN-Vw4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Rdx-U6-Vro"/>
+                            <constraint firstItem="aeI-mP-V3C" firstAttribute="leading" secondItem="VSm-m7-XH9" secondAttribute="leading" id="UFX-4m-doc"/>
+                            <constraint firstItem="VSm-m7-XH9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="37" id="W72-yo-aTM"/>
+                            <constraint firstItem="VSm-m7-XH9" firstAttribute="centerX" secondItem="fLS-jN-Vw4" secondAttribute="centerX" id="Wb2-qw-XBc"/>
+                            <constraint firstItem="klI-FT-lHH" firstAttribute="centerX" secondItem="aeI-mP-V3C" secondAttribute="centerX" id="hU7-e7-5eO"/>
+                            <constraint firstItem="aeI-mP-V3C" firstAttribute="top" secondItem="fLS-jN-Vw4" secondAttribute="bottom" constant="27" id="wVo-Pe-jNx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="cityTextField" destination="VSm-m7-XH9" id="Qga-ab-ZWS"/>
+                        <outlet property="descriptionLabel" destination="klI-FT-lHH" id="ZqW-mX-fql"/>
+                        <outlet property="getWeatherButton" destination="fLS-jN-Vw4" id="gqA-RN-Axr"/>
+                        <outlet property="tempLabel" destination="aeI-mP-V3C" id="nBe-dE-900"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
